@@ -1,5 +1,6 @@
 package streams;
 
+import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -10,29 +11,29 @@ public class Ex2 {
     }
 
     void combineDataFromTwoStreams() {
-        AtomicInteger counter = new AtomicInteger(0);
+        AtomicInteger counter = new AtomicInteger(1);
         AtomicInteger loverCaseLetter = new AtomicInteger('a');
         AtomicInteger upperCaseLetter = new AtomicInteger('A');
 
-        var stream1 = Stream.iterate("a",
-                s -> !s.isEmpty(), (s) -> String.valueOf(String.format("%s", (char) loverCaseLetter.incrementAndGet()) + counter.incrementAndGet()))
+        List<String> stringListLoverCase = Stream.iterate("a1",
+                        s -> !s.isEmpty(), (s) -> String.format("%s", (char) loverCaseLetter.incrementAndGet()) + counter.incrementAndGet())
+                .limit(10)
+                .collect(Collectors.toList());
+        counter.set(1);
+        List<String> stringListUpperCase = Stream.iterate("A1",
+                        s -> !s.isEmpty(), (s) -> String.format("%s", (char) upperCaseLetter.incrementAndGet()) + counter.incrementAndGet())
                 .limit(10)
                 .collect(Collectors.toList());
         counter.set(0);
-        var stream2 = Stream.iterate("A",
-                s -> !s.isEmpty(), (s) -> String.valueOf(String.format("%s", (char) upperCaseLetter.incrementAndGet()) + counter.incrementAndGet()))
-                .limit(10)
-                .collect(Collectors.toList());
-        counter.set(0);
-        var stream3 = stream2.stream()
-                .map(s -> s + stream1.get(counter.getAndIncrement()))
-                .collect(Collectors.toList());
-        System.out.println("Lover letter list: stream1");
-        System.out.println(stream1);
-        System.out.println("Capital letter list: stream2");
-        System.out.println(stream2);
-        System.out.println("Combined list: stream3 Elements from stream1 added to stream2");
-        System.out.println(stream3);
+        List<String> mergedResultList = stringListUpperCase.stream()
+                .map(s -> s + "-" + stringListLoverCase.get(counter.getAndIncrement()))
+                .toList();
+        System.out.println("Lover letter list: stringListLoverCase");
+        System.out.println(stringListLoverCase);
+        System.out.println("Capital letter list: stringListUpperCase");
+        System.out.println(stringListUpperCase);
+        System.out.println("Combined list: mergedResultList Elements from stringListLoverCase added to stringListUpperCase");
+        System.out.println(mergedResultList);
     }
 
     public static void main(String[] args) {
